Menu-page: update => correction of bad alignement on prices, buttons.scss=> add width customisation to the  mixin

--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -1,3 +1,7 @@
-.search__btn,.order-btn{
+.search__btn{
     @include gradient-button;
+}
+
+.order-btn{
+    @include gradient-button($width-multiplier:3);
 }
