--- a/tools/_mixins.scss
+++ b/tools/_mixins.scss
@@ -8,10 +8,10 @@
     background: linear-gradient(356deg, $cc-primary 5%, $cc-secondary 85%); 
 }
 
-@mixin gradient-button($text-color:white){
+@mixin gradient-button($text-color:white,$width-multiplier:1){
     display: inline-block;
     $pv-button: calc($fz-default * 0.9); // vertical padding
-    $ph-button: calc($fz-default * 1.5); // horizontal padding
+    $ph-button: calc($fz-default * 1.5 * $width-multiplier); // horizontal padding
     padding: $pv-button $ph-button;
     color: $text-color;
     border-radius: 10rem;
